--- a/SmartTV/web/stylesheets/main.css
+++ b/SmartTV/web/stylesheets/main.css
@@ -20,7 +20,9 @@ body #main {
     flex-grow: 1;
     flex-basis: 100px;
 
-    /*overflow: hidden;*/
+
+    overflow: hidden;
+    position: relative;
 }
 body #menu {
     display: flex;
@@ -50,7 +52,8 @@ body #menu {
     position: relative;
     padding: 0;
     margin: 0;
-    width: 100vw;
+    width: 100%;
+    max-width: 100%;
     height: 100vh;
     background-image: url('../images/touchpad/background.png');
     background-size: 80vw;
@@ -64,6 +67,7 @@ body #menu {
 .Library {
     display: none;
 }
+
 .Library.selected {
     display: initial;
 }
@@ -78,6 +82,10 @@ body #menu {
 
     background-color: #ffcc00;
     color: black;
+}
+.Library .items {
+    width: 100%;
+    overflow: hidden;
 }
 .LibraryItem {
     color: #ffcc00;
@@ -112,6 +120,7 @@ body #menu {
     margin-left: auto;
     margin-right: auto;
     
+    width: 100%;
 
     z-index: 100;
 
@@ -120,6 +129,9 @@ body #menu {
 
     --color-progress: rgba(252,65,2,1);
     --color-preloaded: rgba(255,196,2,1);
+
+    left: 0;
+    right: 0;
 }
 .PlayerControls button {
     margin: 0px;
